--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ html, body {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: 100%;
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 } 
 
 /*
@@ -74,9 +74,9 @@ main{
 .header nav a{
     display: block;
     padding: 10px;
-    color: #6959CD;
+    color: whitesmoke;/*#7B68EE*/
     font-size: 1.125em;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.125);
     border-radius: 5px;
     transition: 0.1s;
 }
@@ -89,8 +89,8 @@ main{
     margin-left: 30px;
 }
 
-.logo{
-    max-width: 100px;
+.logo {
+    max-width: 120px;
 }
 
 /* Slide */
@@ -110,10 +110,10 @@ main{
 }
 
 .content .titulo {
-    font-size: 2rem;
-    text-align: center;
-    color: white;
-    padding: 30px;
+  font-size: 2rem;
+  text-align: center;
+  color: white;
+  padding: 30px;
 }
 
 .content .filmes{
@@ -139,6 +139,9 @@ main{
 .content img  {
     height: 400px;
     width:auto;
+}
+.content div.scrollmenu{
+	display: none;
 }
 
 /* Footer */
@@ -169,7 +172,7 @@ main{
 }
 
 .footer section.fale-conosco a{
-    color: #6959CD;
+    color: #7B68EE;
     text-decoration: none;
     margin: 30px;
     display: grid;
@@ -178,14 +181,14 @@ main{
 }
 
 .footer section.fale-conosco a:hover{
-    color: #6959CD;
+    color: #7B68EE;
 }
 
 .footer section.social a{
-    color: #6959CD;
+    color: #7B68EE;
     text-decoration: none;
     margin: 30px;
-    border: 3px solid #6959CD;
+    border: 3px solid #7B68EE;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -209,7 +212,7 @@ main{
 }
 
 .footer section.social a:hover{
-    color: #6959CD;
+    color: #7B68EE;
     background: rgba(0, 0, 0, 0.5);
 }
 
@@ -220,7 +223,7 @@ main{
 }
 
 .footer section.local p{
-    color: #6959CD;
+    color: #7B68EE;
 }
 
 .footer section.copyright{
@@ -232,13 +235,15 @@ main{
     padding: 0px;
 }
 
+/*	Portabilidades */
 
 @media (max-width:1200px){                                     /* Precisa adequar os cartazes */
     .layout{
       grid-template-columns: minmax(160px, 1fr) 1fr ;
       grid-template-areas:
         "header header "
-        "content  / "
+				"slide slide"
+        "content content"
         "footer footer "
     }
   
@@ -265,5 +270,103 @@ main{
         justify-content: center;
         align-content: center;
     }
-  }
-  
+}
+
+@media (max-width:900px){                                     /* Precisa adequar os cartazes */
+    .layout{
+      grid-template-columns: 1fr ;
+      grid-template-areas:
+        "header"
+				"slide"
+        "content"
+        "footer"
+    }
+  	.header{
+			grid-template-columns: minmax(160px, 1fr);
+			grid-template-rows: 1fr 1fr;
+			gap:5px;
+		}
+		.header nav ul{
+			display: flex;
+			justify-content: flex-start;
+		}
+		.header nav a{
+	    display: block;
+	    padding: 5px;
+	    color: whitesmoke;/*7B68EE;*/
+	    font-size: 1.2rem;
+	    background: rgba(0, 0, 0, 0.1);
+	    border-radius: 5px;
+	    transition: 0.1s;
+		}
+		.header .menu{
+			justify-content: flex-end;
+			padding: 0px;
+		}
+    .content{
+        display: grid;
+        grid-template-columns: minmax(160px, 1fr);
+        grid-template-rows: auto;
+    }
+		.content .filmes{
+			display: none;
+		}
+		.content div.scrollmenu {
+			display: block;
+		  background-color: black;
+		  overflow: auto;
+		  white-space: nowrap;
+		}
+		
+		.content div.scrollmenu a {
+		  display: inline-block;
+		  color: white;
+		  text-align: center;
+		  padding: 14px;
+		  text-decoration: none;
+		}
+
+		.conternt div.scrollmenu a:hover {
+  			background-color: rgba(0, 0, 0, 0.1);
+		}
+    .footer{
+        grid-template-columns: minmax(160px, 1fr);
+        grid-template-rows: 1fr auto;
+    }
+
+    .footer section.local{
+        display: none;
+    }
+
+    .footer section.fale-conosco{
+        display: none;
+    }
+    .footer section.social ul{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+}
+@media (max-width:405px){
+	.header nav ul{
+		flex-direction: column;
+		justify-content: flex-end;
+	}
+	
+	.header nav ul li{
+		text-align: end;
+	}
+	
+	.header li + li {
+    margin-left: 0px;
+	}
+	
+	.header nav a, .header nav a:hover{
+		background: rgba(0, 0, 0, 0);
+	}
+
+	.content div.titulo{
+		font-size: 1.5rem;
+	}
+}
+
