--- a/css/filmes.css
+++ b/css/filmes.css
@@ -1,92 +1,92 @@
-
 /*  Movie */
 
-.content .movie{                                         /*Adapte para a mesma semântica adotada do pages.css !!!!!!!!*/
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(3 1fr);
-    margin: 5rem auto;
-    width: 80%;
-    height: 600px;
-    justify-items: center;
-    align-items: start;
-    text-align: center;
-  }
-  
-
-.content .movie img{
-  height:520px;
-  width:70%;
-  border: 2px solid #040F55;
-  
+.content .movie {
+  /*Adapte para a mesma semântica adotada do pages.css !!!!!!!!*/
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3 1fr);
+  margin: 5rem auto;
+  width: 80%;
+  height: 600px;
+  justify-items: center;
+  align-items: start;
+  text-align: center;
 }
 
-  .content .movie .detalhes h1{
-  margin-bottom:2rem;
+.content .movie img {
+  height: 520px;
+  width: 70%;
+  border: 2px solid #040f55;
+}
+
+.content .movie .detalhes h1 {
+  margin-bottom: 2rem;
   font-size: 3rem;
-  }
+}
 
-  .content .movie .info{
-    display: grid;
-    background: linear-gradient(136deg,#040F55,#000000); /*linear-gradient(136deg,darkcyan,#040F55);*/ 
-    border-radius:20px;
-    font-size: 1.3rem;
-    grid-template-columns:1fr 1fr 1fr;
-    text-align: center;
-    height:auto;
-  }
+.content .movie .info {
+  display: grid;
+  background: linear-gradient(136deg, #040f55, #000000);
+  border-radius: 20px;
+  font-size: 1.3rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  height: auto;
+}
 
+.content .movie .info .sinopse h2 {
+  margin-bottom: 1rem;
+}
 
-.content .movie .info .sinopse h2{
-    margin-bottom: 1rem;
-  }
-
-  .content .movie .info .sinopse{
+.content .movie .info .sinopse {
   margin-bottom: 1rem;
   grid-column: 1/4;
-  }
-.content .movie .detalhes .info .idade p{
+}
+
+.content .movie .detalhes .info .idade p {
   background-color: #f35e04;
   display: inline;
   padding: 4px 5px;
   border-radius: 2px;
 }
 
-  /*  Sessões  */
+/*  Sessões  */
 
-  .content .movie .detalhes .info .sessoes{
-    color: white;
-    grid-column: 1/4;
-    padding-top: 2rem;
+.content .movie .detalhes .info .sessoes {
+  color: white;
+  grid-column: 1/4;
+  padding-top: 2rem;
 }
 
-  /*  Preços  */
-  .content .preços{
-    color: white;
-  }
+/*  Preços  */
+.content .preços {
+  color: white;
+}
 
+/*  Estilização de tabelas  */
 
-  /*  Estilização de tabelas  */
+.content table {
+  font-size: 1.3rem;
+  text-align: center;
+  margin: auto;
+  border-collapse: collapse;
+  width: 80%;
+}
 
-  .content table{
-    font-size: 1.3rem;
-    text-align: center;
-    margin: auto;
-    border-collapse: collapse;
-    width: 80%;
-     
-  }
-  .content table tr{
-    height: 3rem;
-  }
-  
-  .content table th, table td{
-    border: white solid 1px;
-  }
-  
-  .content #secondcel{
-    border-top: none;
-    border-left: none; 
-  }
-  
+.content table tr {
+  height: 3rem;
+}
 
+.content table th,
+table td {
+  border: white solid 1px;
+}
+
+.content #secondcel {
+  border-top: none;
+  border-left: none;
+}
+
+/* @media (max-width:1200px) */
+/* @media (max-width:900px) */
+/* @media (max-width:405px) */
