--- a/css/pages.css
+++ b/css/pages.css
@@ -1,330 +1,306 @@
+@import url("https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap"); /* Fonte do site*/
 
-@import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap');  /* Fonte do site*/
-
-*{
-  margin:0px;
-  padding:0px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-body{
-    font-family: "Vollkorn", Georgia, serif;
+body {
+  font-family: "Vollkorn", Georgia, serif;
 }
 
-li{
-    list-style: none;
+li {
+  list-style: none;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-img{
-    display: block;
-    max-width: 100%;
-    border-radius: 5px;
+img {
+  display: block;
+  max-width: 100%;
+  border-radius: 5px;
 }
 
-html, body {
-	background-color: black;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: 100%;
+html,
+body {
+  background-color: black;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
   scroll-behavior: smooth;
-} 
+}
 
 /* Layout - Grid Geral */
 
-.layout{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: 
+.layout {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
     "header header header"
     "content content content"
     "footer footer footer";
 }
 
-.col-wide{
-    grid-column: 1/-1;
+.col-wide {
+  grid-column: 1/-1;
 }
 
 /* Header */
 
-.header{
-    grid-area: header;
-    background: linear-gradient(136deg,#000000,#040F55);
-    padding: 30px;
-    display: grid;
-    grid-template-columns: 1fr auto;
-    align-items: center;
+.header {
+  grid-area: header;
+  background: linear-gradient(136deg, #000000, #040f55);
+  padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
 }
 
-.header nav ul{
-    display: flex;
-    flex-wrap: wrap;
+.header nav ul {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.header nav a{
-    display: block;
-    padding: 10px;
-    color: whitesmoke;/*#6959CD;*/
-    font-size: 1.125em;
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    transition: 0.1s;
+.header nav a {
+  display: block;
+  padding: 10px;
+  color: whitesmoke;
+  font-size: 1.125em;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  transition: 0.1s;
 }
 
-.header nav a:hover{
-    background: rgba(0, 0, 0, 0.5);
+.header nav a:hover {
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .header li + li {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
-.logo{
-    max-width: 150px;
+.logo {
+  max-width: 120px;
 }
 
 /* Content */
 
-.content{
-    grid-area: content;
-    margin: 0 auto;
-    color: white;
+.content {
+  grid-area: content;
+  margin: 0 auto;
+  color: white;
 }
 
 .content .titulo {
-    font-size: 2rem;
-    text-align: center;
-    color: white;
-    padding: 30px;
+  font-size: 2rem;
+  text-align: center;
+  color: white;
+  padding: 30px;
 }
 
-.content .mapa{
-    display: flex;
+.content .mapa {
+  display: flex;
 }
 
-.content img  {
-    height: 400px;
-    width:auto;
+.content img {
+  height: 400px;
+  width: auto;
 }
 
 /* Footer */
 
-.footer{
-    grid-area: footer;
-    background: linear-gradient(136deg,#000000,#040F55);
-    display: grid;
-    grid-template-columns: 2fr 1fr 2fr;
-    grid-template-rows: 1fr auto;
-    gap: 30px;
-    text-align: center;
-    justify-content: center;
-    align-self: center;
-    padding: 40px 15% 15px;
-    color: white;
-    font-size: 1rem;
+.footer {
+  grid-area: footer;
+  background: linear-gradient(136deg, #000000, #040f55);
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+  grid-template-rows: 1fr auto;
+  gap: 30px;
+  text-align: center;
+  justify-content: center;
+  align-self: center;
+  padding: 40px 15% 15px;
+  color: white;
+  font-size: 1rem;
 }
 
-.footer section.fale-conosco ul li{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 15px 15px 15px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    align-content: space-around
+.footer section.fale-conosco ul li {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 15px 15px 15px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  align-content: space-around;
 }
 
-.footer section.fale-conosco a{
-    color: #7B68EE;
-    text-decoration: none;
-    margin: 30px;
-    display: grid;
-    justify-content: center;
-    align-content: center;
+.footer section.fale-conosco a {
+  color: #7b68ee;
+  text-decoration: none;
+  margin: 30px;
+  display: grid;
+  justify-content: center;
+  align-content: center;
 }
 
-.footer section.fale-conosco a:hover{
-    color: #7B68EE;
+.footer section.fale-conosco a:hover {
+  color: #7b68ee;
 }
 
-.footer section.social a{
-    color: #7B68EE;
-    text-decoration: none;
-    margin: 30px;
-    border: 3px solid #7B68EE;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    transition: 0.1s;
+.footer section.social a {
+  color: #7b68ee;
+  text-decoration: none;
+  margin: 30px;
+  border: 3px solid #7b68ee;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  transition: 0.1s;
 }
 
 .footer section.social ul {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.footer section.social ul a{
-    align-items: center;
+.footer section.social ul a {
+  align-items: center;
 }
 
-.footer section.social a:hover{
-    color: #7B68EE;
-    background: rgba(0, 0, 0, 0.5);
+.footer section.social a:hover {
+  color: #7b68ee;
+  background: rgba(0, 0, 0, 0.5);
 }
 
-
-.footer section.local{
-    display: grid; 
-    justify-content: center;
+.footer section.local {
+  display: grid;
+  justify-content: center;
 }
 
-.footer section.local p{
-    color: #7B68EE;
+.footer section.local a {
+  color: #7b68ee;
 }
 
-.footer section.copyright{
-    font-size: 12px;
-    font-weight: bold;
-    font-style: italic;
-    color: white;
-    text-align: center;
-    padding: 0px;
+.footer section.copyright {
+  font-size: 12px;
+  font-weight: bold;
+  font-style: italic;
+  color: white;
+  text-align: center;
+  padding: 0px;
 }
 
 /*	Portabilidades */
 
-@media (max-width:1200px){                                     /* Precisa adequar os cartazes */
-    .layout{
-      grid-template-columns: minmax(160px, 1fr) 1fr ;
-      grid-template-areas:
-        "header header "
-        "content content"
-        "footer footer "
-    }
-  
-    .content{
-        display: grid;
-        grid-template-columns: minmax(160px, 1fr);
-        grid-template-rows: auto;
-    }
+@media (max-width: 1200px) {
+  .layout {
+    grid-template-columns: minmax(160px, 1fr) 1fr;
+    grid-template-areas:
+      "header header "
+      "content content"
+      "footer footer ";
+  }
 
-    .footer{
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr auto;
-    }
+  .content {
+    display: grid;
+    grid-template-columns: minmax(160px, 1fr);
+    grid-template-rows: auto;
+  }
 
-    .footer section.local{
-        display: none;
-    }
+  .footer {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto;
+  }
 
-    .footer section.fale-conosco{
-        display: none;
-    }
-    .footer section.social ul{
-        display: flex;
-        justify-content: center;
-        align-content: center;
-    }
+  .footer section.local {
+    display: none;
+  }
+
+  .footer section.fale-conosco {
+    display: none;
+  }
+  .footer section.social ul {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
 }
 
-@media (max-width:900px){                                     /* Precisa adequar os cartazes */
-    .layout{
-      grid-template-columns: 1fr ;
-      grid-template-areas:
-        "header"
-        "content"
-        "footer"
-    }
-  	.header{
-			grid-template-columns: minmax(160px, 1fr);
-			grid-template-rows: 1fr 1fr;
-			gap:5px;
-		}
-		.header nav ul{
-			display: flex;
-			justify-content: flex-start;
-		}
-		.header nav a{
-	    display: block;
-	    padding: 5px;
-	    color: whitesmoke;/*7B68EE;*/
-	    font-size: 1.2rem;
-	    background: rgba(0, 0, 0, 0.1);
-	    border-radius: 5px;
-	    transition: 0.1s;
-		}
-		.header .menu{
-			justify-content: flex-end;
-			padding: 0px;
-		}
-    .content{
-        display: grid;
-        grid-template-columns: minmax(160px, 1fr);
-        grid-template-rows: auto;
-    }
-		.content .filmes{
-			display: none;
-		}
-		.content div.scrollmenu {
-			display: block;
-		  background-color: black;
-		  overflow: auto;
-		  white-space: nowrap;
-		}
-		
-		.content div.scrollmenu a {
-		  display: inline-block;
-		  color: white;
-		  text-align: center;
-		  padding: 14px;
-		  text-decoration: none;
-		}
+@media (max-width: 900px) {
+  .layout {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header"
+      "content"
+      "footer";
+  }
+  .header {
+    grid-template-columns: minmax(160px, 1fr);
+    grid-template-rows: 1fr 1fr;
+    gap: 5px;
+  }
+  .header nav ul {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .header nav a {
+    display: block;
+    padding: 5px;
+    color: whitesmoke;
+    font-size: 1.2rem;
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    transition: 0.1s;
+  }
+  .header .menu {
+    justify-content: flex-end;
+    padding: 0px;
+  }
+  .content {
+    display: grid;
+    grid-template-columns: minmax(160px, 1fr);
+    grid-template-rows: auto;
+  }
+  .footer {
+    grid-template-columns: minmax(160px, 1fr);
+    grid-template-rows: 1fr auto;
+  }
 
-		.conternt div.scrollmenu a:hover {
-  			background-color: rgba(0, 0, 0, 0.1);
-		}
-    .footer{
-        grid-template-columns: minmax(160px, 1fr);
-        grid-template-rows: 1fr auto;
-    }
+  .footer section.local {
+    display: none;
+  }
 
-    .footer section.local{
-        display: none;
-    }
-
-    .footer section.fale-conosco{
-        display: none;
-    }
-    .footer section.social ul{
-        display: flex;
-        justify-content: center;
-        align-content: center;
-    }
+  .footer section.fale-conosco {
+    display: none;
+  }
+  .footer section.social ul {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
 }
-@media (max-width:405px){
-	
-	.header nav ul{
-		flex-direction: column;
-		justify-content: flex-end;
-	}
-	
-	.header nav ul li{
-		text-align: end;
-	}
-	.header li + li {
+@media (max-width: 405px) {
+  .header nav ul {
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .header nav ul li {
+    text-align: end;
+  }
+  .header li + li {
     margin-left: 0px;
-	}
-	.header nav a, .header nav a:hover{
-		background: rgba(0, 0, 0, 0);
-	}
+  }
+  .header nav a,
+  .header nav a:hover {
+    background: rgba(0, 0, 0, 0);
+  }
 }
-
