--- a/css/slide.css
+++ b/css/slide.css
@@ -14,9 +14,9 @@
   bottom: 0;
   left: 0;
   right: 0;
-  transition: all 1.0s ease-in-out; 
+  transition: all 1s ease-in-out;
 }
-.arrow{
+.arrow {
   border: solid white;
   border-width: 0 3px 3px 0;
   display: inline-block;
@@ -27,7 +27,6 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%) rotate(135deg);
-
 }
 .arrow-next {
   right: 30px;
@@ -36,73 +35,70 @@
   transform: translateY(-50%) rotate(-45deg);
 }
 
-[id^= "item"] {
+[id^="item"] {
   display: none;
 }
 .item-1 {
   z-index: 2;
   opacity: 1;
-  background: url('../img/C1.jpg');
+  background: url("../img/C1.jpg");
   background-size: cover;
   background-attachment: fixed;
 }
 .item-2 {
-  background: url('../img/C2.jpg');
+  background: url("../img/C2.jpg");
   background-size: cover;
   background-attachment: fixed;
 }
 .item-3 {
-  background: url('../img/C3.jpg');
+  background: url("../img/C3.jpg");
   background-size: cover;
   background-attachment: fixed;
-  }
+}
 
 .item-4 {
-  background: url('../img/C4.jpg');
+  background: url("../img/C4.jpg");
   background-size: cover;
   background-attachment: fixed;
 }
 
 .item-5 {
-  background: url('../img/C5.jpg');
+  background: url("../img/C5.jpg");
   background-size: cover;
   background-attachment: fixed;
 }
 
 .item-6 {
-  background: url('../img/C6.jpg');
+  background: url("../img/C6.jpg");
   background-size: cover;
   background-attachment: fixed;
 }
 
-
 #item-1:target ~ .item-1 {
   opacity: 1;
 }
-#item-2:target ~ .item-2, 
+#item-2:target ~ .item-2,
 #item-3:target ~ .item-3,
 #item-4:target ~ .item-4,
 #item-5:target ~ .item-5,
 #item-6:target ~ .item-6 {
   z-index: 3;
   opacity: 1;
-} 
+}
 .controls {
-position: absolute;
-bottom: 0;
-width: 100%;
-text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 .carousel-wrapper .control-button {
-margin: 0;
-font-size: 4em;
-text-align: center;
-text-decoration: none;
-color: white;
-    
+  margin: 0;
+  font-size: 4em;
+  text-align: center;
+  text-decoration: none;
+  color: white;
 }
-.carousel-wrapper .control-button:hover{
-color: #22aadd;
-transition: color .3s;
+.carousel-wrapper .control-button:hover {
+  color: #22aadd;
+  transition: color 0.3s;
 }
-
